    FIXED: [ 2609483 ] unpacking to directories with international characters

  CHANGED: the default views are the interviews now

2.0.0 "Mars Pathfinder"
===========================

    ADDED: [ 2466695 ] Archive dialog now remembers Compression level

    FIXED: [ 2671702 ] wrong file size for files with currupt encoding 
    FIXED: sync-browse fails if the name contains spaces
    FIXED: Compile error with Qt-4.5 (patch by Marc Schiffbauer)
    FIXED: tab change at dragging doesn't work
    FIXED: [ 2543170 ] Crashes on mouse wheel in brief view
    FIXED: [ 2553396 ] Krusader exits after closing KrViewer
    FIXED: [ 2563664 ] Krusader always trashes (not deletes) files
    FIXED: tar.bz2 doesn't always detected automatically
    FIXED: panel freezes if the inactive path is invalid
    FIXED: problem when splitter sizes are 0, 0
    FIXED: iso protocol problems with images bigger than 4GByte
    FIXED: Windows: iso protocol works well now
    FIXED: Windows: slow start
    FIXED: Windows: the root directory is C:\
    FIXED: MountMan saves its last size
    FIXED: [ 1535954 ] krviewer hex view endian dependent
    FIXED: [ 1550740 ] Wrong placeholder replacement
    FIXED: [ 1988452 ] "Open the popup panel" button hides files from the file pane
    FIXED: [ 1965317 ] Return to panel when pressing Escape in kcmdline/panel path
    FIXED: [ 2265338 ] Copy from rar files broken
    FIXED: [ 2484665 ] Crash when deleting modified user action
    FIXED: MountMan: mount/umount/eject uses Solid if possible
    FIXED: [ 2381505 ] Ctrl+Shift+D in editor (KWrite) not work
    FIXED: Krusader fails to edit files containing international chars with Shift+F4

  CHANGED: Changed default Alt+letter shortcuts because of [ 2564684 ].
           See the details in SVNNEWS
  CHANGED: Initial Konfigurator size is now 900x680
     ARCH: view properties for detailed/brief/interviews are merged into one
     
     I18N: Updated Italian translation (thanks Giuseppe Bordoni)