@@ -41,10 +41,11 @@ protected:
 		MOUNT_ID,
 		UNMOUNT_ID,
 		TRASH_ID,
-		SHRED_ID,
 		NEW_LINK_ID,
 		NEW_SYMLINK_ID,
 		REDIRECT_LINK_ID,
+		EMPTY_TRASH_ID,
+		RESTORE_TRASHED_FILE_ID,
 		SYNC_SELECTED_ID,
 		SEND_BY_EMAIL_ID,
 		LINK_HANDLING_ID,
