@@ -1,3 +1,5 @@
+    ADDED: better trash integration
+
     FIXED: [ 2609483 ] unpacking to directories with international characters
 
   CHANGED: the default views are the interviews now
